add: station uptime report
